# pesachat

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: quick_start.py
migrations/: README  env.py
pesachat-bot/: LICENSE  README.md
pesachat-bot/pesachat_bot/: __init__.py  main.py
pesachat-bot/pesachat_bot/locales/: en.json  fr.json  sw.json  yo.json
pesachat-core/: README.md
pesachat-core/pesachat_core/: __init__.py  exceptions.py  main.py  utils.py
pesachat-core/pesachat_core/sep/: sep10.py  sep12.py  sep31.py  sep38.py
tests/: test_health.py
