[tool.poetry]
name = "pesachat"
version = "0.1.0"
description = "A Telegram bot for cross-border remittance on Stellar"
authors = ["PesaChat contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pesachat_bot", from = "pesachat-bot" },
    { include = "pesachat_core", from = "pesachat-core" },
]

[tool.poetry.scripts]
pesachat-bot  = "pesachat_bot.main:main"
pesachat-core = "pesachat_core.main:main"

[tool.poetry.dependencies]
python             = "^3.11"
python-telegram-bot = "^21.0"
fastapi            = "^0.111.0"
uvicorn            = {extras = ["standard"], version = "^0.30.0"}
stellar-sdk        = "^9.0.0"
sqlalchemy         = "^2.0.0"
alembic            = "^1.13.0"
redis              = "^5.0.0"
httpx              = "^0.27.0"
pydantic-settings  = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest            = "^8.0.0"
pytest-asyncio    = "^0.23.0"
httpx             = "^0.27.0"
ruff              = "^0.4.0"
black             = "^24.0.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"